# korea-filings-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  build.gradle.kts  docker-compose.yml  glama.json  settings.gradle.kts  smithery.yaml
.github/workflows/: test.yml
docs/: ANALYTICS.md  ARCHITECTURE.md  PRD.md  ROADMAP.md  RUNBOOK.md  SLO.md  STATUS.md
docs/launch/: HN_DRAFT.md
landing/: index.html  robots.txt  sitemap.xml
mcp/: Dockerfile  README.md  pyproject.toml
mcp/src/koreafilings_mcp/: __init__.py  server.py
scripts/: pg-backup.sh
sdk/python/: CHANGELOG.md  LICENSE  README.md  pyproject.toml
sdk/python/examples/: live_payment.py
sdk/python/src/koreafilings/: __init__.py  _payment.py  client.py  errors.py  models.py
sdk/python/tests/: test_client.py
sdk/typescript/: .npmignore  CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts
sdk/typescript/examples/: live-payment.ts
sdk/typescript/src/: client.ts  errors.ts  index.ts  models.ts  payment.ts
sdk/typescript/tests/: client.test.ts  payment.test.ts
src/main/java/com/dartintel/api/: ApiApplication.java
src/main/java/com/dartintel/api/api/: ApiExceptionHandler.java  DisclosuresController.java  DiscoveryRootController.java  LegacyApiDocsController.java  PublicController.java  SwaggerUiAssetRedirectController.java  WellKnownController.java
src/main/java/com/dartintel/api/company/: Company.java  CompanyController.java  CompanyDirectoryUpserter.java  CompanyDto.java  CompanyRepository.java  CompanySearchResponse.java  CompanyService.java  CompanySyncScheduler.java
src/main/java/com/dartintel/api/config/: OpenApiConfig.java  SchedulerConfig.java  WebConfig.java  X402OpenApiCustomizer.java
src/main/java/com/dartintel/api/ingestion/: DartClient.java  DartDocumentParser.java  DartListResponse.java  DartPollingScheduler.java  DartProperties.java  Disclosure.java  DisclosureRepository.java
src/main/java/com/dartintel/api/observability/: RequestAudit.java  RequestAuditFilter.java  RequestAuditPersister.java  RequestAuditRepository.java
src/main/java/com/dartintel/api/payment/: CdpJwtSigner.java  FacilitatorClient.java  PaymentLog.java  PaymentLogReconciliationMonitor.java  PaymentLogRepository.java  PaymentNotifier.java  PaymentStore.java  VerifiedPayment.java  X402Paywall.java  X402Properties.java  (+3 more)
src/main/resources/: application.yml
src/main/resources/db/migration/: V10__request_audit_table.sql  V11__widen_payment_log_signature_hash.sql  V12__widen_payment_log_endpoint_and_tx_id.sql  V13__disclosure_body.sql  V14__disclosure_summary_summary_en_nullable.sql  V15__disclosure_english_identity_backfill.sql  V16__collapse_report_nm_interior_padding.sql  V17__repair_llm_ticker_tags.sql  V18__request_audit_referer.sql  V1__create_disclosure.sql  V2__create_disclosure_summary.sql  V3__create_llm_audit.sql  V4__create_payment_log.sql  V5__create_company.sql  V6__disclosure_ticker.sql  V7__company_relax_ticker_format.sql  V8__hot_path_indices_and_summary_text.sql  V9__disclosure_summary_prompt_version.sql
src/main/resources/static/: llms.txt  robots.txt  sitemap.xml
testclient/: .env.testclient.example  README.md  payer.py  requirements.txt
(+67 files in other folders)
