[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "koreafilings"
version = "0.1.0"
description = "Python SDK for koreafilings.com — AI-summarized Korean DART disclosures, paid per call in USDC via x402."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "korea-filings-api" }]
keywords = ["dart", "korea", "disclosures", "x402", "llm", "fintech", "usdc"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27,<1.0",
    "pydantic>=2.6,<3.0",
    "eth-account>=0.13,<0.14",
]

[project.urls]
Homepage = "https://koreafilings.com"
Documentation = "https://koreafilings.com"
Source = "https://github.com/OldTemple91/korea-filings-api"
Issues = "https://github.com/OldTemple91/korea-filings-api/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/koreafilings"]

[tool.hatch.build.targets.sdist]
include = ["/src", "/README.md", "/LICENSE", "/pyproject.toml"]
